# PodstawyPrzetwarzaniaDuzychZbiorowDanych

./: .gitignore  LICENSE  pyproject.toml  zad1.ipynb  zad2.ipynb  zad3.ipynb
